--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   dio: 3.0.9
   flutter_spinkit: 4.1.2
   url_launcher: 5.4.2
-  fluro: 1.6.1
   event_bus: 1.1.0
   shared_preferences: 0.5.3
   path_provider: 1.6.5
@@ -23,7 +22,7 @@ dependencies:
   orientation: 1.1.0
   rxdart: 0.23.1
   provider: 4.0.4
-  provider_architecture: 1.0.5
+  stacked: 1.7.4
   oktoast: 2.3.1
   flutter_inner_drawer: 0.5.4
   flutter_swiper: 1.1.6
@@ -31,8 +30,8 @@ dependencies:
   connectivity: 0.4.8+1
   permission_handler: 4.4.0+hotfix.2
   built_value: 7.0.4
-  get_it: 3.1.0
-  hive: 1.4.1+1
+  get_it: 4.0.4
+  hive: ^1.4.1+1
   device_info: 0.4.2+1
   shimmer: 1.1.0
   app_settings: 3.0.1
@@ -41,7 +40,6 @@ dependencies:
   http_parser: 3.1.3
   mime: 0.9.6+3
   json_annotation: 3.0.1
-  get: 1.11.1
   fijkplayer: 0.7.0
   flutter_bluetooth_basic: 0.1.3
   barcode_scan: 2.0.1
@@ -50,7 +48,15 @@ dependencies:
   audioplayers: 0.14.0
   nested: 0.0.4
   cached_network_image: 2.0.0
-  flushbar: 1.9.1
+  # 蓝牙插件
+  flutter_ble_lib: 2.2.5
+  # 蓝牙设备模拟器，仅适用于 flutter_ble_lib
+  blemulator: 1.1.3
+  # 日志
+  logging: 0.11.4
+  # 路由导航
+  get: 2.10.1
+  focus_detector: 1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +69,7 @@ dev_dependencies:
   built_value_generator: ^7.0.4
   hive_generator: ^0.7.0
   pedantic: ^1.8.0
-  logger: ^0.8.2
+  logger: ^0.9.1
 
   flutter_inappwebview: 2.1.0
 
