接口https自签名证书认证报错

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   dio: 3.0.9
+  dio_http2_adapter: 1.0.0
   flutter_spinkit: 4.1.2
   url_launcher: 5.4.2
   shared_preferences: 0.5.3
