--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,68 +11,83 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  dio: 3.0.9
-  dio_http2_adapter: 1.0.0
-  flutter_spinkit: 4.1.2
-  url_launcher: 5.4.2
-  shared_preferences: 0.5.3
-  path_provider: ^1.6.10
-  flutter_cupertino_date_picker: 1.0.12
-  orientation: 1.1.0
-  rxdart: 0.24.1
-  provider: 4.0.5
-  stacked: 1.7.4
-  oktoast: 2.3.1
-  flutter_inner_drawer: 0.5.4
-  flutter_swiper: 1.1.6
-  city_pickers: 0.1.30
-  connectivity: 0.4.8+1
-  permission_handler: 4.4.0+hotfix.4
-  built_value: 7.0.4
-  injectable: 1.0.2
-  get_it: 4.0.4
-  quiver: ^2.0.5
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
-  device_info: 0.4.2+1
-  shimmer: 1.1.0
-  app_settings: 4.0.0
-  http_parser: 3.1.3
-  mime: 0.9.6+3
-  get: 3.4.2
-  # 动画
-  flare_flutter: 2.0.6
-  # 动画
-  lottie: 0.5.1
-  qr_flutter: 3.2.0
-  web_socket_channel: 1.1.0
-  protobuf: 1.0.1
-  cached_network_image: 2.1.0+1
-  focus_detector: 1.0.2
-  freezed_annotation: ^0.7.1
-  json_annotation: ^3.0.0
-  date_format: 1.0.8
-  flutter_local_notifications: 1.4.0
-  flutter_picker: ^1.1.3
-  numberpicker: 1.2.0
-  # 日志
-  logging: 0.11.4
-  # 日志
-  fimber: ^0.4.2
+  # 核心：MVVM框架
+  stacked: 2.1.6
+  # http请求
+  dio: 4.0.0
+  # https请求
+  dio_http2_adapter: 2.0.0
+  # App打开url
+  url_launcher: 6.0.3
+  # 本地存储
+  shared_preferences: 2.0.5
+  # 硬件存储地址
+  path_provider: 2.0.1
+  # 
+  rxdart: ^0.26.0
+  # 数据管理
+  provider: 5.0.0
+  # 数据管理
+  get_it: ^6.0.0
+  # 装饰器初始化。配合get_it使用
+  injectable: 1.2.1
+  # 路由管理
+  get: 4.1.4
+  # 提示框
+  oktoast: 3.0.0
+  # 连接状态
+  connectivity: 3.0.3
+  # 权限
+  permission_handler: 7.1.0
+  # 轻量数据库 (不适合本地存储的数据，使用此库)
+  hive: 2.0.4
+  # 获取硬件信息
+  device_info: 2.0.0
+  # 从应用程序打开iOS和Android手机设置页面。
+  app_settings: 4.0.4
+  # 解析Http
+  http_parser: 4.0.0
+  # 处理MIME类型定义和处理MIME多部分媒体类型流
+  mime: 1.0.0
+  # 动画. 各种圆形进度条
+  flutter_spinkit: 5.0.0
+  # 动画。快速添加闪光动画，常用于骨架屏
+  shimmer: 2.0.0
+  # 动画。2D动画库flare的flutter版本
+  flare_flutter: 3.0.0
+  # 动画。设计师做图
+  lottie: 1.0.1
+  # 二维码
+  qr_flutter: 4.0.0
+  # 数据序列化。为Protobuf的Dart实现提供运行时支持
+  # protobuf: 2.0.0
+  # 图片缓存equatable: 
+  cached_network_image: 3.0.0
+  # app显示/隐藏后台时通知。等价于封装好的 lifecycle_manager.dart
+  focus_detector: 2.0.0
+  # 日志(dart.dev开发)
+  logging: 1.0.1
+  # 自动生成model
+  built_value: ^8.0.0
+  # json序列化.配置自动升model
+  json_annotation: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   # 数据mock
-  mockito: ^4.1.1
-  injectable_generator: 1.0.2
-  build_runner: ^1.7.2
-  freezed: ^0.10.8
-  json_serializable: ^3.2.0
-  built_value_generator: ^7.0.4
-  hive_generator: ^0.7.0+2
-  pedantic: ^1.8.0
-  logger: ^0.9.1
+  mockito: ^5.0.4
+  # injectable_generator: ^1.2.1
+  build_runner: ^2.0.1
+  freezed: ^0.14.1+2
+  json_serializable: ^4.1.0
+  built_value_generator: ^8.0.4
+  hive_generator: ^1.1.0
+  # google最佳实践
+  pedantic: ^1.11.0
+  # 日志
+  logger: ^1.0.0
 
 flutter:
   uses-material-design: true
