--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,95 +1,88 @@
 name: template
 description: A new Flutter project.
 
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.5.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  # 核心：MVVM框架
-  stacked: 2.1.6
-  # http请求
-  dio: 4.0.0
-  # https请求
-  dio_http2_adapter: 2.0.0
-  # 适配屏幕
-  flutter_screenutil: 5.0.0
-  # App打开url
-  url_launcher: 6.0.3
-  # 本地存储
-  shared_preferences: 2.0.5
-  # 硬件存储地址
-  path_provider: 2.0.1
-  # 
-  rxdart: ^0.26.0
-  # 数据管理
-  provider: 5.0.0
-  # 数据管理
-  get_it: ^6.0.0
-  # 装饰器初始化。配合get_it使用
-  injectable: 1.2.1
-  # 路由管理
-  get: 4.1.4
-  # 提示框
-  oktoast: 3.0.0
-  # 连接状态
-  connectivity: 3.0.3
-  # 权限
-  permission_handler: 7.1.0
-  # 轻量数据库 (不适合本地存储的数据，使用此库)
-  hive: 2.0.4
-  # 获取硬件信息
-  device_info: 2.0.0
-  # 从应用程序打开iOS和Android手机设置页面。
-  app_settings: 4.0.4
-  # 解析Http
-  http_parser: 4.0.0
-  # 处理MIME类型定义和处理MIME多部分媒体类型流
-  mime: 1.0.0
-  # 动画. 各种圆形进度条
-  flutter_spinkit: 5.0.0
-  # 动画。快速添加闪光动画，常用于骨架屏
-  shimmer: 2.0.0
-  # 动画。2D动画库flare的flutter版本
-  flare_flutter: 3.0.0
-  # 动画。设计师做图
-  lottie: 1.0.1
-  # 二维码
-  qr_flutter: 4.0.0
-  # 数据序列化。为Protobuf的Dart实现提供运行时支持
-  # protobuf: 2.0.0
-  # 图片缓存equatable: 
-  cached_network_image: 3.0.0
-  # app显示/隐藏后台时通知。等价于封装好的 lifecycle_manager.dart
-  focus_detector: 2.0.0
-  # 日志(dart.dev开发)
-  logging: 1.0.1
-  # 自动生成model
-  built_value: ^8.0.0
-  # json序列化.配置自动升model
-  json_annotation: ^4.0.1
 
+  dio: 4.0.0
+  dio_http2_adapter: 2.0.0
+  flutter_spinkit: 5.0.0
+  url_launcher: 6.0.3
+  shared_preferences: 2.0.5
+  path_provider: 2.0.2
+  rxdart: ^0.26.0
+  provider: 5.0.0
+  # 核心MMVM框架
+  stacked: 2.1.9  
+  stacked_hooks: 0.2.1
+  stacked_services: 0.8.8
+
+  flutter_screenutil: ^5.0.0
+  oktoast: 3.0.0
+  flutter_inner_drawer: 1.0.0+1
+  flutter_swiper: 1.1.6
+  city_pickers: 1.0.1
+  connectivity: 3.0.6
+  permission_handler: 7.1.0
+  built_value: ^8.1.0
+  injectable: 1.4.1
+  get_it: 7.1.3
+  quiver: 3.0.1
+  hive: 2.0.4
+  hive_flutter: 1.1.0
+  device_info: 2.0.2
+  shimmer: 2.0.0
+  app_settings: 4.1.1
+  http_parser: 4.0.0
+  mime: 1.0.0
+  get: 4.1.4
+  # 动画
+  flare_flutter: 3.0.1
+  # 动画
+  lottie: 1.0.1
+  qr_flutter: 4.0.0
+  web_socket_channel: 2.1.0
+  protobuf: 2.0.0
+  cached_network_image: 3.0.0
+  focus_detector: 2.0.0
+  freezed_annotation: 0.14.2
+  json_annotation: 4.0.1
+  date_format: 2.0.2
+  flutter_local_notifications: 6.0.0
+  flutter_picker: 2.0.2
+  numberpicker: 2.1.1
+  # 日志
+  logging: 1.0.1
+  # 日志
+  fimber: 0.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   # 数据mock
-  mockito: ^5.0.4
-  # injectable_generator: ^1.2.1
+  mockito: ^5.0.0
+  injectable_generator: 1.4.1
   build_runner: ^2.0.1
-  freezed: ^0.14.1+2
-  json_serializable: ^4.1.0
-  built_value_generator: ^8.0.4
+  freezed: ^0.14.2
+  json_serializable: ^4.1.2
+  built_value_generator: ^8.0.6
   hive_generator: ^1.1.0
-  # google最佳实践
   pedantic: ^1.11.0
-  # 日志
-  logger: ^1.0.0
+  logger: 1.0.0
 
 flutter:
   uses-material-design: true
