--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: template
+name: fluter_template_perfect
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
