--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fluter_template_perfect">
+    package="com.example.fluttertemplate">
    <application
-        android:label="fluter_template_perfect"
+        android:label="fluttertemplate"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
