--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: fluter_template_perfect
+name: fluttertemplate
 description: A new Flutter project.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
@@ -11,36 +11,43 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  
+  # 核心MMVM框架
+  stacked: 2.2.3
+  stacked_hooks: 0.2.1
+  stacked_services: 0.8.8
 
+  # services
+  share_plus: 2.1.4
   dio: 4.0.0
   dio_http2_adapter: 2.0.0
-  flutter_spinkit: 5.0.0
   url_launcher: 6.0.3
-  shared_preferences: 2.0.5
+  shared_preferences: 2.0.6
+  connectivity: 3.0.6
+  app_settings: 4.1.1
+  flutter_dotenv: 5.0.1
+  package_info: 2.0.2
+
+  flutter_spinkit: 5.0.0
   path_provider: 2.0.2
   rxdart: ^0.26.0
   provider: 5.0.0
-  # 核心MMVM框架
-  stacked: 2.1.9
-  stacked_hooks: 0.2.1
-  stacked_services: 0.8.8
 
   flutter_screenutil: ^5.0.0
   oktoast: 3.1.1
   flutter_inner_drawer: 1.0.0+1
   flutter_swiper: 1.1.6
   city_pickers: 1.0.1
-  connectivity: 3.0.6
+  
   permission_handler: 7.1.0
   built_value: ^8.1.0
-  injectable: 1.4.1
   get_it: 7.1.3
   quiver: 3.0.1
   hive: 2.0.4
   hive_flutter: 1.1.0
   device_info: 2.0.2
   shimmer: 2.0.0
-  app_settings: 4.1.1
+
   http_parser: 4.0.0
   mime: 1.0.0
   get: 4.1.4
@@ -71,19 +78,19 @@ dev_dependencies:
     sdk: flutter
 
   # 数据mock
-  mockito: ^5.0.0
-  injectable_generator: 1.4.1
   build_runner: ^2.0.1
-  freezed: ^0.14.2
+  stacked_generator: ^0.4.1
+  hive_generator: ^1.1.0
   json_serializable: ^4.1.2
   built_value_generator: ^8.0.6
-  hive_generator: ^1.1.0
-  pedantic: ^1.11.0
+  freezed: ^0.14.2
+  mockito: ^5.0.0
   logger: 1.0.0
 
 flutter:
   uses-material-design: true
   assets:
+    - .env
     - assets/lang/zh.json
     - assets/lang/en.json
 
@@ -99,12 +106,6 @@ flutter:
     - assets/animations/
     - assets/animations/lottie/
     - assets/images/
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -123,5 +124,4 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+
