--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fluttertemplate
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  
-  # 核心MMVM框架
+
+  # core MMVM
   stacked: 2.2.3
   stacked_hooks: 0.2.1
   stacked_services: 0.8.8
@@ -23,54 +23,43 @@ dependencies:
   dio_http2_adapter: 2.0.0
   url_launcher: 6.0.3
   shared_preferences: 2.0.6
-  connectivity: 3.0.6
+  connectivity_plus: 1.1.0
   app_settings: 4.1.1
+  package_info_plus: 1.0.6
   flutter_dotenv: 5.0.1
-  package_info: 2.0.2
 
-  flutter_spinkit: 5.0.0
-  path_provider: 2.0.2
+  # three modules
+  device_info_plus: 2.1.0
   rxdart: ^0.26.0
-  provider: 5.0.0
-
-  flutter_screenutil: ^5.0.0
-  fluttertoast: 8.0.8
-  flutter_inner_drawer: 1.0.0+1
-  flutter_swiper: 1.1.6
-  
-  permission_handler: 7.1.0
   built_value: ^8.1.0
+  get: 4.1.4
   get_it: 7.1.3
-  quiver: 3.0.1
+  path_provider: 2.0.2
+  provider: 5.0.0
+  permission_handler: 7.1.0
+  logging: 1.0.1
+  fluttertoast: 8.0.8
+
+  feedback: 2.0.0
+  feature_discovery: 0.14.0
+  flutter_spinkit: 5.0.0
   hive: 2.0.4
   hive_flutter: 1.1.0
-  device_info: 2.0.2
-  shimmer: 2.0.0
-
   http_parser: 4.0.0
   mime: 1.0.0
-  get: 4.1.4
+  shimmer: 2.0.0
+  quiver: 3.0.1
   # 动画
   flare_flutter: 3.0.1
   # 动画
   lottie: 1.1.0
   qr_flutter: 4.0.0
   web_socket_channel: 2.1.0
-  protobuf: 2.0.0
-  cached_network_image: 3.0.0
+  cached_network_image: 3.1.0
   focus_detector: 2.0.0
   freezed_annotation: 0.14.2
   json_annotation: 4.0.1
-  date_format: 2.0.2
-  flutter_local_notifications: 6.0.0
-  flutter_picker: 2.0.2
-  numberpicker: 2.1.1
-  # 日志
-  logging: 1.0.1
-  # 日志
-  fimber: 0.6.1
-  feedback: 2.0.0
-  feature_discovery: 0.14.0
+  flutter_local_notifications: 8.1.1
 
 dev_dependencies:
   flutter_test:
@@ -123,4 +112,3 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
-
