--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,25 +15,26 @@ dependencies:
   # core MMVM
   stacked: 2.2.3
   stacked_hooks: 0.2.1
-  stacked_services: 0.8.8
+  stacked_services: 0.8.13
 
   # services
-  share_plus: 2.1.4
   dio: 4.0.0
   dio_http2_adapter: 2.0.0
   url_launcher: 6.0.3
-  shared_preferences: 2.0.6
-  connectivity_plus: 1.1.0
-  app_settings: 4.1.1
-  package_info_plus: 1.0.6
+  shared_preferences: 2.0.5
+  share: 2.0.4
+  connectivity: 3.0.3
+  device_info: 2.0.2
   flutter_dotenv: 5.0.1
+  app_settings: 4.1.1
 
   # three modules
-  device_info_plus: 2.1.0
+  meta: 1.3.0
   rxdart: ^0.26.0
   built_value: ^8.1.0
-  get: 4.1.4
-  get_it: 7.1.3
+  built_collection: ^5.1.0
+  get: 4.3.8
+  get_it: 7.2.0
   path_provider: 2.0.2
   provider: 5.0.0
   permission_handler: 7.1.0
@@ -43,8 +44,6 @@ dependencies:
   feedback: 2.0.0
   feature_discovery: 0.14.0
   flutter_spinkit: 5.0.0
-  hive: 2.0.4
-  hive_flutter: 1.1.0
   http_parser: 4.0.0
   mime: 1.0.0
   shimmer: 2.0.0
@@ -56,7 +55,6 @@ dependencies:
   qr_flutter: 4.0.0
   web_socket_channel: 2.1.0
   cached_network_image: 3.1.0
-  focus_detector: 2.0.0
   freezed_annotation: 0.14.2
   json_annotation: 4.0.1
   flutter_local_notifications: 8.1.1
@@ -67,9 +65,8 @@ dev_dependencies:
 
   # 数据mock
   build_runner: ^2.0.1
-  stacked_generator: ^0.4.1
-  hive_generator: ^1.1.0
-  json_serializable: ^4.1.2
+  stacked_generator: 0.5.0
+  json_serializable: 4.1.3
   built_value_generator: ^8.0.6
   freezed: ^0.14.2
   mockito: ^5.0.0
