--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   device_info: 2.0.2
   flutter_dotenv: 5.0.1
   app_settings: 4.1.1
+  package_info: 2.0.2
 
   # three modules
   meta: 1.3.0
