--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,10 +32,19 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    //  lintOptions {
+    //    disable 'InvalidPackage'
+    //  }
+
+    // ndk {
+    // arm64-v8a: 目前主流架构平台（占用率95%）
+    // abiFilters 'armeabi-v7a','arm64-v8a'
+    // }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.fluttertemplate"
-        minSdkVersion 25
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
