--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,19 @@ dependencies:
   dio: 4.0.0
   dio_http2_adapter: 2.0.0
   url_launcher: 6.0.3
-  shared_preferences: 2.0.5
+  shared_preferences: 2.0.6
   share: 2.0.4
-  connectivity: 3.0.3
+  connectivity: 3.0.6
   device_info: 2.0.2
-  flutter_dotenv: 5.0.1
+  flutter_dotenv: 5.0.2
   app_settings: 4.1.1
   package_info: 2.0.2
+  flutter_keyboard_visibility: 5.1.0
+  freezed_annotation: 0.14.2
 
   # three modules
   meta: 1.3.0
-  rxdart: ^0.26.0
+  rxdart: ^0.27.0
   built_value: ^8.1.0
   built_collection: ^5.1.0
   get_it: 7.2.0
@@ -42,35 +44,36 @@ dependencies:
   logging: 1.0.1
   fluttertoast: 8.0.8
 
-  feedback: 2.0.0
-  feature_discovery: 0.14.0
-  flutter_spinkit: 5.0.0
+  feedback: 2.2.1
+  flutter_spinkit: 5.1.0
   http_parser: 4.0.0
-  mime: 1.0.0
+  mime: 1.0.1
   shimmer: 2.0.0
+  # utils
   quiver: 3.0.1
-  # 动画
+  # animation
   flare_flutter: 3.0.1
-  # 动画
+  # animation
   lottie: 1.1.0
   qr_flutter: 4.0.0
   web_socket_channel: 2.1.0
   cached_network_image: 3.1.0
-  freezed_annotation: 0.14.2
+
   json_annotation: 4.0.1
-  flutter_local_notifications: 8.1.1
+  flutter_local_notifications: 9.1.4
   flutter_midi: 1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # 数据mock
+
   build_runner: ^2.0.1
   stacked_generator: 0.5.0
   json_serializable: 4.1.3
   built_value_generator: ^8.0.6
   freezed: ^0.14.2
+  # mock data
   mockito: ^5.0.0
   logger: 1.0.0
   screenshot: 1.2.3
@@ -85,7 +88,7 @@ flutter:
     - assets/sounds/Piano.sf2
 
     - assets/audio/viper.mp3
-    - assets/audio/bgaudio.mp3
+    - assets/audio/tapbutton.mp3
 
     - assets/webview/dist/index.html
     - assets/webview/dist/
