--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,35 +13,34 @@ dependencies:
     sdk: flutter
 
   # core MMVM
-  stacked: 2.2.3
-  stacked_hooks: 0.2.1
-  stacked_services: 0.8.13
+  stacked: 2.2.7+1
+  stacked_hooks: 0.2.1+1
+  stacked_services: 0.8.16
 
   # services
-  dio: 4.0.0
+  dio: 4.0.4
   dio_http2_adapter: 2.0.0
-  url_launcher: 6.0.3
-  shared_preferences: 2.0.6
+  url_launcher: 6.0.17
+  shared_preferences: 2.0.9
   share: 2.0.4
-  connectivity: 3.0.6
-  device_info: 2.0.2
+  connectivity_plus: 2.1.0
+  device_info_plus: 3.1.1
   flutter_dotenv: 5.0.2
   app_settings: 4.1.1
   package_info: 2.0.2
   flutter_keyboard_visibility: 5.1.0
   freezed_annotation: 0.14.2
+  meta: 1.7.0
 
   # three modules
-  meta: 1.3.0
   rxdart: ^0.27.0
   built_value: ^8.1.0
   built_collection: ^5.1.0
   get_it: 7.2.0
-  get: 4.3.8
-  path_provider: 2.0.2
-  provider: 5.0.0
-  permission_handler: 7.1.0
-  logging: 1.0.1
+  get: 4.5.1
+  path_provider: 2.0.7
+  provider: 6.0.1
+  permission_handler: 8.3.0
   fluttertoast: 8.0.8
 
   feedback: 2.2.1
@@ -52,14 +51,14 @@ dependencies:
   # utils
   quiver: 3.0.1
   # animation
-  flare_flutter: 3.0.1
+  flare_flutter: 3.0.2
   # animation
-  lottie: 1.1.0
+  lottie: 1.2.1
   qr_flutter: 4.0.0
   web_socket_channel: 2.1.0
-  cached_network_image: 3.1.0
+  cached_network_image: 3.2.0
 
-  json_annotation: 4.0.1
+  json_annotation: 4.4.0
   flutter_local_notifications: 9.1.4
   flutter_midi: 1.1.0
 
@@ -67,15 +66,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
   build_runner: ^2.0.1
-  stacked_generator: 0.5.0
-  json_serializable: 4.1.3
+  json_serializable: 6.1.1
   built_value_generator: ^8.0.6
   freezed: ^0.14.2
   # mock data
   mockito: ^5.0.0
-  logger: 1.0.0
+  logger: 1.1.0
   screenshot: 1.2.3
 
 flutter:
