--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,6 @@ dependencies:
 
   json_annotation: 4.4.0
   flutter_local_notifications: 9.1.4
-  flutter_midi: 1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +69,7 @@ dev_dependencies:
   json_serializable: 6.1.1
   built_value_generator: ^8.0.6
   freezed: ^0.14.2
+  dart_code_metrics: ^4.8.1
   # mock data
   mockito: ^5.0.0
   logger: 1.1.0
