--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   rxdart: ^0.27.0
   built_value: ^8.1.0
   built_collection: ^5.1.0
+  hive: 2.0.4
+  hive_flutter: 1.1.0
   get_it: 7.2.0
   get: 4.5.1
   path_provider: 2.0.7
@@ -68,6 +70,7 @@ dev_dependencies:
   build_runner: ^2.0.1
   json_serializable: 6.1.1
   built_value_generator: ^8.0.6
+  hive_generator: ^1.1.0
   freezed: ^0.14.2
   # mock data
   mockito: ^5.0.0
