--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,64 +13,65 @@ dependencies:
     sdk: flutter
 
   # core MMVM
-  stacked: 2.2.7+1
-  stacked_hooks: 0.2.1+1
-  stacked_services: 0.8.16
+  stacked: 3.0.0
+  stacked_services: 0.9.5
 
   # services
-  dio: 4.0.4
-  dio_http2_adapter: 2.0.0
+  flutter_hooks: 0.18.5+1
+  dio: 4.0.6
   url_launcher: 6.0.17
-  shared_preferences: 2.0.9
-  share: 2.0.4
-  connectivity_plus: 2.1.0
-  device_info_plus: 3.1.1
+  shared_preferences: 2.0.15
+  share_plus: 4.1.0
+  connectivity_plus: 2.3.6
+  device_info_plus: 4.1.2
   flutter_dotenv: 5.0.2
-  app_settings: 4.1.1
-  package_info: 2.0.2
-  flutter_keyboard_visibility: 5.1.0
-  freezed_annotation: 0.14.2
+  app_settings: 4.1.8
+  package_info_plus: 1.4.3
+  flutter_keyboard_visibility: 5.3.0
+  freezed_annotation: 2.1.0
   meta: 1.7.0
 
   # three modules
   rxdart: ^0.27.0
-  built_value: ^8.1.0
-  built_collection: ^5.1.0
-  hive: 2.0.4
+  built_value: ^8.4.1
+  built_collection: ^5.1.1
+  hive: 2.2.3
   hive_flutter: 1.1.0
   get_it: 7.2.0
-  get: 4.5.1
-  path_provider: 2.0.7
-  provider: 6.0.1
-  permission_handler: 8.3.0
+  get: 4.6.5
+  path_provider: 2.0.11
+  provider: 6.0.3
+  permission_handler: 10.0.0
+  android_id: 0.0.7
   fluttertoast: 8.0.8
 
   feedback: 2.2.1
   flutter_spinkit: 5.1.0
   http_parser: 4.0.0
-  mime: 1.0.1
+  mime: 1.0.2
   shimmer: 2.0.0
   # utils
   quiver: 3.0.1
   # animation
-  flare_flutter: 3.0.2
+  # flare_flutter: 3.0.2
+  rive: 0.9.1
   # animation
-  lottie: 1.2.1
+  lottie: 1.4.2
 
-  json_annotation: 4.4.0
-  flutter_local_notifications: 9.1.4
+  json_annotation: 4.6.0
+  flutter_local_notifications: 9.9.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.0.1
-  json_serializable: 6.1.1
-  built_value_generator: ^8.0.6
-  hive_generator: ^1.1.0
-  freezed: ^0.14.2
+  build_runner: ^2.2.0
+  json_serializable: 6.3.1
+  built_value_generator: ^8.4.1
+  hive_generator: ^1.1.3
+  freezed: ^2.1.0
   # mock data
-  mockito: ^5.0.0
+  mockito: ^5.3.0
   logger: 1.1.0
 
 flutter:
